--- a/CSProject/ReadME
+++ b/CSProject/ReadME
@@ -1,1 +1,2 @@
-Please Open Main.py to access the inventory system for orders
+Please Open Main.py to run the program, the program is an inventory management system/ analog shopping
+market
